Set width of labels to max-content to avoid wrapping during window resize

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ img{
 .description-box>div{
     padding: 1rem 1rem 0rem 2rem;
     font-family: 'Arvo', serif;
-    font-size: 2.5rem;
+    font-size: clamp(15px, 5em, 45px);
     padding-top: 10%;
     
 }
@@ -62,6 +62,7 @@ label{
     margin-bottom: 7px;
     font-family: 'Alata', sans-serif;
     font-size: 1em;
+    width: max-content;
 }
 
 form{
